--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -61,20 +61,15 @@
 			<thead>
 			<!-- <tbody class="noselect"> -->
 			<tbody>
-				<tr ng-repeat="data in taskDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" 
+				<tr ng-repeat="data in taskDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" style="cursor: pointer;"
 				    data-context-menu="./views/taskdetail/contextMenu1.html">
 					<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 					<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;">
-						
-						<div ng-show="h.dataType == 'sys_isActive'" style="text-align: center;">
-							<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data[h.columnName].status"></i>
-							<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="data[h.columnName].status"></i>
-						</div>
-						
-						{{ h.dataType == 'sys_isActive' ? '': 
+						{{ 
 						   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
 						   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
-						   h.dataType == 'owner' ? data[h.columnName][0].showname : data[h.columnName] }}
+						   h.dataType == 'owner' ? data[h.columnName][0].showname : data[h.columnName] 
+						   }}
 					</td>
 				</tr>
 			</tbody>
