--- a/backend/src/main/webapp/app/views/login.html
+++ b/backend/src/main/webapp/app/views/login.html
@@ -8,13 +8,15 @@
                 <div class="panel-body">
                     <form role="form" ng-submit="login()" name="loginForm">
                         <fieldset>
-                            <div class="form-group">
-                                <!-- <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus> -->
-                                <input class="form-control" placeholder="Username" name="username" type="text" autofocus ng-model="credentials.username" required>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" ng-model="credentials.password" required>
-                            </div>
+							<div class="form-group input-group">
+							    <span class="input-group-addon"><i class="fa fa-user"></i></span>
+							    <input class="form-control" placeholder="Username" name="username" type="text" autofocus ng-model="credentials.username" required>
+							</div>
+							<div class="form-group input-group">
+							    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+							    <input class="form-control" placeholder="Password" name="password" type="password" ng-model="credentials.password" required>
+							</div>	
+								
                             <!-- <div class="checkbox">
                                 <label>
                                     <input name="remember" type="checkbox" value="Remember Me">Remember Me
