--- a/backend/src/main/webapp/app/styles/detailCof.css
+++ b/backend/src/main/webapp/app/styles/detailCof.css
@@ -73,14 +73,37 @@
     border-radius: .25em;
     color: #fff;
     float: left;
-    font-weight: 700;
+    font-size: 11px;
+    font-weight: 500;
     height: 50px;
     margin: 5px;
     padding: 3px;
     text-align: center;
-    width: 50px;
+    width: 92px;
 }
 
 .detailConf .dropzone .container-element {
-    margin: 10px;
+    margin: 10px 0 10px 0;
+}
+
+.detailConf .box {
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
+
+.detailConf .box-blue {
+    border-color: #bce8f1;
+}
+
+.detailConf .box-blue > h3 {
+	
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+    background-image: -webkit-linear-gradient(top,#d9edf7 0,#c4e3f3 100%);
+    background-image: linear-gradient(to bottom,#d9edf7 0,#c4e3f3 100%);
 }
