--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -1,7 +1,13 @@
-<div class="row show-grid" style="margin: 0;">
-		<div ng-repeat="f in fieldName | filter:{dataType:'!owner'}" class="col-lg-3" style="font-size: 12px;">
-			<strong>{{ f.columnNameAlias || f.columnName }}</strong> : {{
-										   f.dataType == 'date' ? (taskDetail[f.columnName] | date:format) : 
-										   f.dataType == 'num' ? (taskDetail[f.columnName] | number:2) : taskDetail[f.columnName] }}
+<!-- <div class="row" style="margin: 0;"> -->
+		<div ng-repeat="f in fieldName | filter:{dataType:'!owner'}" class="col-lg-3" style="font-size: 12px; padding: 0;">
+			<div class="col-lg-5" style="text-align: right; margin: 0; padding-right: 10px;">
+				<strong>{{ f.columnNameAlias || f.columnName }}: </strong>
+			</div>
+			<div class="col-lg-7" style="padding: 0;">
+				{{ 
+				   f.dataType == 'date' ? (taskDetail[f.columnName] | date:format) : 
+				   f.dataType == 'num' ? (taskDetail[f.columnName] | number:2) : taskDetail[f.columnName] 
+				}}
+			</div> 
 		</div>
-</div>
+<!-- </div> -->
