--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -1,6 +1,15 @@
+<style>
+.mayfender {
+	background-color: #d9edf7;
+    border-color: #bce8f1;
+    /* background-image: -webkit-linear-gradient(top,#d9edf7 0,#c4e3f3 100%); */
+    /* background-image: linear-gradient(to bottom,#d9edf7 0,#c4e3f3 100%); */
+}
+</style>
+
 <!-- <div class="row" style="margin: 0;"> -->
 		<div ng-repeat="f in fieldName | filter:{dataType:'!owner'}" class="col-lg-3" style="font-size: 12px; padding: 0;">
-			<div class="col-lg-5" style="text-align: right; margin: 0; padding-right: 6px;">
+			<div class="col-lg-5 mayfender" style="text-align: right; margin: 0; padding-right: 6px;">
 				<strong>{{ f.columnNameAlias || f.columnName }}: </strong>
 			</div>
 			<div class="col-lg-7" style="padding: 0;">
