--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -1,7 +1,7 @@
 <div ui-view>
 	<div class="col-lg-12">
 		<code ng-show="isOver">จำนวน field เกินกำหนด [Limited 30 fields]</code>
-		<button type="button" class="btn btn-info pull-right" style="margin-bottom: 5px;" ng-click="detailDisplayConf()">ตั้งค่าข้อมูล</button>
+		<button type="button" class="btn btn-info pull-right" style="margin-bottom: 5px;" ng-click="detailDisplayConf()">ตั้งค่าหน้าแสดงข้อมูล</button>
 	</div>  
 	<div class="row">  
 		<div class="advancedDemo col-lg-12">
