--- a/backend/src/main/webapp/app/styles/detailCof.css
+++ b/backend/src/main/webapp/app/styles/detailCof.css
@@ -65,10 +65,11 @@
 
 .detailConf .dropzone .itemlist {
     min-height: 120px !important;
+    border: 1px solid red;
 }
 
 .detailConf .dropzone .itemlist > li {
-    background-color: #337ab7;
+   /*  background-color: #337ab7;
     border: none;
     border-radius: .25em;
     color: #fff;
@@ -79,7 +80,7 @@
     margin: 5px;
     padding: 3px;
     text-align: center;
-    width: 92px;
+    width: 92px; */
 }
 
 .detailConf .dropzone .container-element {
