--- a/backend/src/main/webapp/app/views/product/detail_conf.html
+++ b/backend/src/main/webapp/app/views/product/detail_conf.html
@@ -25,18 +25,36 @@
 			                dnd-dragover="dragoverCallback(event, index, external, type)"
 			                dnd-drop="dropCallback(event, index, item, external, type, 'itemType')"
 			                dnd-inserted="logEvent('Element was inserted at position ' + index, event)"
-			                class="itemlist">
-			                <li ng-repeat="item in items"
+			                class="itemlist row">
+			                <!-- <li ng-repeat="item in items"
 			                    dnd-draggable="item"
 			                    dnd-type="'itemType'"
 			                    dnd-dragstart="logEvent('Started to drag an item', event)"
 			                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
 			                    dnd-copied="logEvent('Item copied', event)"
 			                    dnd-canceled="logEvent('Drag operation canceled', event)"
-			                    dnd-dragend="logEvent('Drag operation ended', event)">
+			                    dnd-dragend="logEvent('Drag operation ended', event)" class="col-lg-3">
 			                    <input class="pull-left" type="checkbox" ng-model="item.isActive" ng-change="update(item)">
 			                    {{item.label}}
-			                </li>
+			                </li> -->
+			                
+			                <!-- <div class="col-lg-4" ng-repeat="item in items" style="border: 1px solid red; font-size: 11px; font-weight: 500;">{{ item.label }}</div> -->
+			                
+			                <div ng-repeat="item in items"
+			                    dnd-draggable="item"
+			                    dnd-type="'itemType'"
+			                    dnd-dragstart="logEvent('Started to drag an item', event)"
+			                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
+			                    dnd-copied="logEvent('Item copied', event)"
+			                    dnd-canceled="logEvent('Drag operation canceled', event)"
+			                    dnd-dragend="logEvent('Drag operation ended', event)" 
+			                    class="col-lg-4" style="border: 1px solid red; font-size: 11px; font-weight: 500; vertical-align: middle; min-height: 30px;">
+			                    <input style="pull-left" type="checkbox" ng-model="item.isActive" ng-change="update(item)">
+			                    <span>{{ item.label }}</span>
+			                </div>
+			                
+			                
+			                
 			            </ul>
 			            <div class="clearfix"></div>
 			        </div>
