--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -77,7 +77,7 @@
 		                            </div>
 		                        </div>
 		                        <div class="row">
-			                        <div class="col-lg-9">
+			                        <div class="col-lg-6">
 				                        <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
 				                            <span class="glyphicon glyphicon-upload"></span> Upload all
 				                        </button>
@@ -88,8 +88,10 @@
 				                            <span class="glyphicon glyphicon-trash"></span> Remove all
 				                        </button>
 			                        </div>
-			                        <div class="col-lg-3">
+			                        <div class="col-lg-6">
 				                        <input type="file" nv-file-select="" uploader="uploader" multiple accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
+				                        
+			                        	<button class="btn btn-primary pull-right" type="button" ng-click="showOthersUploadMenu()">นำเข้าข้อมูลที่เกี่ยวข้อง</button>
 			                        </div>
 		                        </div>
 		                    </div>
@@ -148,3 +150,47 @@
         </div>
     </div>
 </div>
+
+
+
+
+<!-- Modal -->
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+     <div class="modal-dialog">
+         <div class="modal-content">
+         	<div class="modal-header">
+                <button type="button" class="close" ng-click="dismissModal()" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">เลือกเมนูการนำเข้า</h4>
+            </div>
+            <div class="modal-body">            	    	
+				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
+				  <div class="panel-body">
+				  
+				  	<div class="row" ng-repeat="user in users"> 
+				  		<div class="col-lg-8" style="text-align: center;">
+						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" 
+						  	        editable-text="user.name" e-style="margin-bottom: 3px; min-width: 300px;" e-name="name" e-form="rowform">{{ user.name }}</button>
+				  		</div>
+				  		<div class="col-lg-4">
+				  			<form editable-form name="rowform" onbeforesave="saveUser($data, user.id)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == user">
+					          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-success">บันทึก</button>
+					          <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="btn btn-default">ยกเลิก</button>
+					        </form>
+					        <div class="buttons" ng-show="!rowform.$visible">
+					          <button class="btn btn-info" ng-click="rowform.$show()">แก้ใข</button>
+					          <button class="btn btn-danger" ng-click="removeUser($index)">ลบ</button>
+					        </div>  
+				  		</div>
+				  	</div>
+				  	
+				  	<button type="button" class="btn btn-warning btn-circle btn-sm" ng-click="addUser()"><i class="fa fa-plus-square"></i></button>
+				  </div>
+				</div>
+            </div>
+           	<div class="modal-footer">
+				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
+			</div>
+         </div>
+     </div>
+ </div>
+<!-- / Modal -->
