--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -166,24 +166,24 @@
 				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
 				  <div class="panel-body">
 				  
-				  	<div class="row" ng-repeat="user in users"> 
+				  	<div class="row" ng-repeat="item in othersImportMenu"> 
 				  		<div class="col-lg-8" style="text-align: center;">
 						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" 
-						  	        editable-text="user.name" e-style="margin-bottom: 3px; min-width: 300px;" e-name="name" e-form="rowform">{{ user.name }}</button>
+						  	        editable-text="item.name" e-style="margin-bottom: 3px;" e-class="form-control" e-name="name" e-form="rowform">{{ item.name }}</button>
 				  		</div>
 				  		<div class="col-lg-4">
-				  			<form editable-form name="rowform" onbeforesave="saveUser($data, user.id)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == user">
+				  			<form editable-form name="rowform" onbeforesave="saveMenu($data, item.id)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
 					          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-success">บันทึก</button>
-					          <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="btn btn-default">ยกเลิก</button>
+					          <button type="button" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewMenu(item)" class="btn btn-default">ยกเลิก</button>
 					        </form>
 					        <div class="buttons" ng-show="!rowform.$visible">
 					          <button class="btn btn-info" ng-click="rowform.$show()">แก้ใข</button>
-					          <button class="btn btn-danger" ng-click="removeUser($index)">ลบ</button>
+					          <button class="btn btn-danger" ng-click="removeMenu($index)">ลบ</button>
 					        </div>  
 				  		</div>
 				  	</div>
 				  	
-				  	<button type="button" class="btn btn-warning btn-circle btn-sm" ng-click="addUser()"><i class="fa fa-plus-square"></i></button>
+				  	<button type="button" class="btn btn-warning btn-circle btn-sm" ng-click="addMenu()"><i class="fa fa-plus-square"></i></button>
 				  </div>
 				</div>
             </div>
