--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -91,7 +91,7 @@
 			                        <div class="col-lg-6">
 				                        <input type="file" nv-file-select="" uploader="uploader" multiple accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
 				                        
-			                        	<button class="btn btn-primary pull-right" type="button" ng-click="showOthersUploadMenu()">นำเข้าข้อมูลที่เกี่ยวข้อง</button>
+			                        	<button class="btn btn-primary pull-right" type="button" ng-click="showOthersUploadMenu()">นำเข้าข้อมูลเสริม</button>
 			                        </div>
 		                        </div>
 		                    </div>
@@ -166,20 +166,19 @@
 				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
 				  <div class="panel-body">
 				  
-				  	<div class="row" ng-repeat="item in othersImportMenu"> 
+				  	<div class="row" ng-repeat="item in menus"> 
 				  		<div class="col-lg-8" style="text-align: center;">
 						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" 
-						  	        editable-text="item.name" e-style="margin-bottom: 3px; min-width: 300px;" e-name="name" e-form="rowform">{{ item.name }}</button>
+						  	        editable-text="item.menuName" e-style="margin-bottom: 3px; min-width: 300px;" e-name="menuName" e-form="rowform">{{ item.menuName }}</button>
 				  		</div>
-				  		<!-- e-class="form-control" -->
 				  		<div class="col-lg-4">
-				  			<form editable-form name="rowform" onbeforesave="saveMenu($data, item.id)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
+				  			<form editable-form name="rowform" onbeforesave="saveMenu($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
 					          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-success">บันทึก</button>
 					          <button type="button" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewMenu(item)" class="btn btn-default">ยกเลิก</button>
 					        </form>
 					        <div class="buttons" ng-show="!rowform.$visible">
 					          <button class="btn btn-info" ng-click="rowform.$show()">แก้ใข</button>
-					          <button class="btn btn-danger" ng-click="removeMenu($index)">ลบ</button>
+					          <button class="btn btn-danger" ng-click="removeMenu($index, item.id)">ลบ</button>
 					        </div>  
 				  		</div>
 				  	</div>
