--- a/backend/src/main/webapp/app/views/import_others/main.html
+++ b/backend/src/main/webapp/app/views/import_others/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">นำเข้างานใหม่</h1>
+			<h1 class="page-header">นำเข้า{{ menuName }}</h1>
 		</div>
 	</div>
 	
