--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -84,7 +84,7 @@
              </div>
 		</div>
 		<div class="col-lg-2">
-			<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px; border-color: #337AB7;" ng-show="imageSource">		
+			<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px;" ng-show="imageSource">		
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
