--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -80,7 +80,7 @@
 							</div>
 						</div>
 						<div class="col-lg-2">
-							<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px; ng-show="imageSource">		
+							<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px;" ng-show="imageSource">		
 						</div>
 					</form>
                 </div>
