--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -68,7 +68,7 @@
 							{{ 
 							   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
 							   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
-							   h.dataType == 'owner' ? data[h.columnName][0].showname : data[h.columnName] 
+							   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : data[h.columnName] 
 							   }}
 						</td>
 					</tr>
