--- a/backend/src/main/webapp/app/styles/detailCof.css
+++ b/backend/src/main/webapp/app/styles/detailCof.css
@@ -56,7 +56,7 @@
  */
 .detailConf .dropzone .dndPlaceholder {
     background-color: #ddd !important;
-    min-height: 42px;
+    min-height: 25px;
     display: block;
     position: relative;
 }
@@ -65,22 +65,22 @@
 
 .detailConf .dropzone .itemlist {
     min-height: 120px !important;
-    border: 1px solid red;
 }
 
-.detailConf .dropzone .itemlist > li {
-   /*  background-color: #337ab7;
+.detailConf .dropzone .itemlist > li {	
+    background-color: #337ab7;
     border: none;
     border-radius: .25em;
     color: #fff;
     float: left;
     font-size: 11px;
     font-weight: 500;
-    height: 50px;
+    height: 25px;
     margin: 5px;
     padding: 3px;
     text-align: center;
-    width: 92px; */
+    width: 144px;
+    white-space: nowrap;
 }
 
 .detailConf .dropzone .container-element {
