--- a/backend/src/main/webapp/app/views/product/detail_conf.html
+++ b/backend/src/main/webapp/app/views/product/detail_conf.html
@@ -15,9 +15,9 @@
 		        dnd-type="'containerType'"
 		        dnd-effect-allowed="copyMove"
 		        dnd-moved="model.splice($index, 1)">
-		        <div class="col-lg-4" style="padding: 0 3px 0 0;">
+		        <div class="col-lg-6" style="padding: 0 3px 0 0;">
 			        <div class="container-element box box-blue">
-			            <h3>Container</h3>
+			            <h3>{{ groupNames[$index] }}</h3>
 			            <ul dnd-list="items"
 			                dnd-allowed-types="['itemType']"
 			                dnd-horizontal-list="true"
@@ -26,35 +26,17 @@
 			                dnd-drop="dropCallback(event, index, item, external, type, 'itemType')"
 			                dnd-inserted="logEvent('Element was inserted at position ' + index, event)"
 			                class="itemlist row">
-			                <!-- <li ng-repeat="item in items"
-			                    dnd-draggable="item"
-			                    dnd-type="'itemType'"
-			                    dnd-dragstart="logEvent('Started to drag an item', event)"
-			                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
-			                    dnd-copied="logEvent('Item copied', event)"
-			                    dnd-canceled="logEvent('Drag operation canceled', event)"
-			                    dnd-dragend="logEvent('Drag operation ended', event)" class="col-lg-3">
-			                    <input class="pull-left" type="checkbox" ng-model="item.isActive" ng-change="update(item)">
-			                    {{item.label}}
-			                </li> -->
-			                
-			                <!-- <div class="col-lg-4" ng-repeat="item in items" style="border: 1px solid red; font-size: 11px; font-weight: 500;">{{ item.label }}</div> -->
-			                
-			                <div ng-repeat="item in items"
-			                    dnd-draggable="item"
-			                    dnd-type="'itemType'"
-			                    dnd-dragstart="logEvent('Started to drag an item', event)"
-			                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
-			                    dnd-copied="logEvent('Item copied', event)"
-			                    dnd-canceled="logEvent('Drag operation canceled', event)"
-			                    dnd-dragend="logEvent('Drag operation ended', event)" 
-			                    class="col-lg-4" style="border: 1px solid red; font-size: 11px; font-weight: 500; vertical-align: middle; min-height: 30px;">
-			                    <input style="pull-left" type="checkbox" ng-model="item.isActive" ng-change="update(item)">
-			                    <span>{{ item.label }}</span>
-			                </div>
-			                
-			                
-			                
+				                <li ng-repeat="item in items"
+				                    dnd-draggable="item"
+				                    dnd-type="'itemType'"
+				                    dnd-dragstart="logEvent('Started to drag an item', event)"
+				                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
+				                    dnd-copied="logEvent('Item copied', event)"
+				                    dnd-canceled="logEvent('Drag operation canceled', event)"
+				                    dnd-dragend="logEvent('Drag operation ended', event)">
+				                    <input type="checkbox" style="float: left;" ng-model="item.isActive" ng-change="update(item)">
+				                    <span title="{{ item.label }}">{{ item.label }}</span>
+				                </li>
 			            </ul>
 			            <div class="clearfix"></div>
 			        </div>
@@ -64,8 +46,3 @@
        
 	</div>
 </div>
-
-<!-- <div view-source="advanced"></div>
-
-<h2>Generated Model</h2>
-<pre>{{modelAsJson}}</pre> -->
