--- a/backend/src/main/webapp/app/views/product/detail_conf.html
+++ b/backend/src/main/webapp/app/views/product/detail_conf.html
@@ -16,8 +16,8 @@
 		        dnd-effect-allowed="copyMove"
 		        dnd-moved="model.splice($index, 1)">
 			        <div class="container-element box box-blue">
-			            <h3>{{ groupNames[$index] }}</h3>
-			            <ul dnd-list="items"
+			            <h3>{{ items.groupName }}</h3>
+			            <ul dnd-list="items.items"
 			                dnd-allowed-types="['itemType']"
 			                dnd-horizontal-list="true"
 			                dnd-external-sources="true"
@@ -25,11 +25,11 @@
 			                dnd-drop="dropCallback(event, index, item, external, type, 'itemType')"
 			                dnd-inserted="logEvent('Element was inserted at position ' + index, event)"
 			                class="itemlist row">
-				                <li ng-repeat="item in items"
+				                <li ng-repeat="item in items.items"
 				                    dnd-draggable="item"
 				                    dnd-type="'itemType'"
 				                    dnd-dragstart="logEvent('Started to drag an item', event)"
-				                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
+				                    dnd-moved="items.items.splice($index, 1); logEvent('Item moved', event)"
 				                    dnd-copied="logEvent('Item copied', event)"
 				                    dnd-canceled="logEvent('Drag operation canceled', event)"
 				                    dnd-dragend="logEvent('Drag operation ended', event)">
