--- a/backend/src/main/webapp/app/views/product/detail_conf.html
+++ b/backend/src/main/webapp/app/views/product/detail_conf.html
@@ -1,5 +1,10 @@
 
-<button type="button" class="btn btn-info" style="margin-bottom: 5px;" ng-click="addContainer()">เพิ่ม data container</button>
+<div class="col-lg-12">
+	<div class="form-inline" style="text-align: center;">
+		<button type="button" class="btn btn-info" ng-click="addContainer()">เพิ่ม data container</button>
+		<input class="form-control" type="text" ng-model="gname">
+	</div>
+</div>
 
 
 <div class="detailConf">
