--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -8,9 +8,9 @@
 
 	<div class="col-lg-12">
 		<div style="background-color: #356190;" class="comm-rcorners-1">
-			<div ng-repeat="f in fieldName" class="col-lg-3" style="font-size: 12px; padding: 0; color: #E1E2E3;">
-				<div class="col-lg-5 mayfender" style="text-align: right; margin: 0; padding-right: 6px; border-top: 1px solid #234E7C; background-color: #264F7A;">
-					<strong>{{ f.columnNameAlias || f.columnName }}: </strong>
+			<div ng-repeat="f in fieldName" class="col-lg-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
+				<div class="col-lg-5 mayfender" style="text-align: right; margin: 0; padding-right: 6px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
+					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
 				<div class="col-lg-7" style="padding: 0; background-color: #356190; border-top: 1px solid #234E7C;">
 					{{ 
