--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -24,3 +24,11 @@
 		</div>
 	</div>
 </div>
+<div class="row">
+	<div class="col-lg-12">
+		<div class="btn-group" style="margin: 3px 0 3px 0;">
+		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)">{{ menu.name }}</button>
+		</div>
+	</div>
+	<div class="col-lg-12" style="min-height: 100px;" ng-include="lastTabActionMenuActive.url"></div>
+</div>
